--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav aria-label="Primary navigation">
       <ul id="primaryNav">
         <li><a href="index.html" aria-current="page">Home</a></li>
-        <li><a href="chamber/index.html">Chamber</a></li>
+        <li><a href="chamber/directory.html">Chamber</a></li>
         <li><a href="final/index.html">Final</a></li>
       </ul>
     </nav>
