--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,8 +14,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="Chamber Member Directory" />
   <meta property="og:description" content="Browse Chamber members and discover local businesses in our community." />
-  <meta property="og:image" content="https://YOUR-GITHUB-PAGES-URL/chamber/images/acme6.jpeg" />
-  <meta property="og:url" content="https://YOUR-GITHUB-PAGES-URL/chamber/directory.html" />
+  <meta property="og:url" content="https://camocros.github.io/wdd231/chamber/directory.html">
+<meta property="og:image" content="https://camocros.github.io/wdd231/chamber/images/og-directory.jpg">
   <meta property="og:type" content="website" />
 
   <!-- Required CSS order: normalize/reset first, then small.css, then larger.css -->
