--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,25 +4,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Timbuktu Chamber of Commerce | Home</title>
-  <meta name="description" content="Timbuktu Chamber of Commerce home page: events, local weather, and business spotlights.">
+  <title>Cali Chamber of Commerce | Home</title>
+  <meta name="description" content="Cali Chamber of Commerce home page: events, local weather, and member spotlights.">
   <meta name="author" content="Camilo Serna">
 
   <link rel="icon" href="images/favicon.ico">
 
-  <!-- Shared / base styles (same across chamber pages) -->
   <link rel="stylesheet" href="styles/chamber.css">
-
-  <script src="scripts/chamber.js" defer></script>
+  <script src="js/chamber.js" defer></script>
 </head>
 
 <body>
   <header class="site-header">
     <div class="site-brand">
       <a href="index.html" aria-label="Home">
-        <img src="images/logo.svg" alt="Timbuktu Chamber of Commerce logo" width="48" height="48">
+        <img src="images/logo.svg" alt="Cali Chamber of Commerce logo" width="48" height="48">
       </a>
-      <span class="site-name">Timbuktu Chamber of Commerce</span>
+      <span class="site-name">Cali Chamber of Commerce</span>
     </div>
 
     <button id="menuBtn" type="button" aria-label="Menu" aria-expanded="false" aria-controls="primaryNav">
@@ -46,12 +44,12 @@
     <section class="hero" aria-label="Hero">
       <picture>
         <source srcset="images/hero.webp" type="image/webp">
-        <img src="images/hero.jpg" alt="Skyline and local businesses in Timbuktu" loading="eager" width="1200" height="500">
+        <img src="images/hero.jpg" alt="Cali, Colombia skyline and local businesses" loading="eager" width="1200" height="500">
       </picture>
 
       <div class="hero-overlay">
-        <h1>Welcome to the Timbuktu Chamber</h1>
-        <p>Connect with local businesses, events, and opportunities to grow together.</p>
+        <h1>Welcome to the Cali Chamber</h1>
+        <p>Connect with local businesses, events, and opportunities to grow together in Cali.</p>
         <a class="btn cta" href="join.html">Join the Chamber</a>
       </div>
     </section>
@@ -62,20 +60,20 @@
       <div class="card">
         <h2>Current Events</h2>
         <ul class="events">
-          <li><strong>Business Networking Night</strong><br><span>Thursday 6:00 PM • Downtown Hall</span></li>
+          <li><strong>Business Networking Night</strong><br><span>Thursday 6:00 PM • Centro, Cali</span></li>
           <li><strong>Small Business Workshop</strong><br><span>Saturday 10:00 AM • Chamber Office</span></li>
-          <li><strong>Community Market</strong><br><span>Sunday 9:00 AM • Central Plaza</span></li>
+          <li><strong>Community Market</strong><br><span>Sunday 9:00 AM • Parque / Plaza Central</span></li>
         </ul>
       </div>
 
       <!-- CURRENT WEATHER -->
       <div class="card weather">
-        <h2>Current Weather</h2>
+        <h2>Current Weather (Cali)</h2>
 
         <div class="weather-now">
           <img id="weatherIcon" alt="" width="64" height="64">
           <div>
-            <p class="temp"><span id="tempNow">--</span>°</p>
+            <p class="temp"><span id="tempNow">--</span>°C</p>
             <p class="desc" id="weatherDesc">Loading...</p>
           </div>
         </div>
@@ -118,7 +116,7 @@
     </div>
 
     <div class="footer-meta">
-      <p>&copy; <span id="currentyear"></span> Timbuktu Chamber of Commerce • Timbuktu, Mali</p>
+      <p>&copy; <span id="currentyear"></span> Cali Chamber of Commerce • Cali, Colombia</p>
     </div>
 
     <div class="footer-modified">
